  o Moved karaoke syllable text in audio display to the top instead of bottom, since it often covered important information in spectrum mode (jfs)
  o Misc. changes and bugfixes in karaoke mode. Using the syllable splitter should be easier now. (jfs)
  o Fixed loading of Avisynth Scripts as audio. (AMZ)
- Changes to Audio Spectrum: (jfs)
  o The calculated FFT data are now cached, so things should be faster.
    - The maximum size of the cache can be configured. Default is unlimited, which provides the best performance assuming enough memory is available.
  o The quality of the spectrum can be easier configured, better quality requires more CPU and memory.
  o Actual signal power is now more accurately represented.
  o The palette is changed.
  o The selection is no longer shown by ugly reverse colour but with a different palette instead.
  o Use vertical zoom slider to amplify/dampen displayed signal strength. (Useful for better visualisation of quiet sections, or easier picking out the dominating frequencies in noisy sections.)
- Style Manager changes:
  o Automatically select the style of the current line when Style Manager is opened. (jfs)
  o Style storages with invalid characters are now caught, and the invalid characters replaced with safe ones. Previously such storages seemed to be created correctly but were never stored to disk. (jfs)
  o Added long-missing Edit buttons. (jfs)
  o Renaming a style will now ask you if you want to rename all instances of it on the script. (AMZ)
  o Style name collisions (when moving from storage, creating or renaming) will now prompt the user before performing the action. (AMZ)
  o Added an "Import from script..." button to import styles directly from other subtitle files. (AMZ)
  o Added buttons to move styles up, down, to top or to bottom, on both storage and current script. (AMZ)
  o Added sorting functionality for both storage and current script. (AMZ)
  o Prevent creating multiple storages with the same names. (AMZ)